# pyscs

./: README.md  pyproject.toml  setup.cfg  setup.py  test.py
pyscs/: __init__.py  alert.py  alertto.py  script.py  scs.py
pyscs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyscs/: __init__.py  alert.py  atom.py  script.py  scs.py
tests/: test.py
