[build-system]
requires = ["requests", "pydantic", "hatchling"]
build-backend = "hatchling.build"


[project]
name = "pyscs"
version = "3.8.1"
authors = [
  { name="cander", email="cander_liubiao@126.com" },
]
description = "python lib for scs, scs version <= 3.8"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hyahm/pyscs"
"Bug Tracker" = "https://github.com/hyahm/pyscs/issues"